# webds_touch

./: .gitignore  .prettierignore  MANIFEST.in  README.md  RELEASE.md  install.json  package-lock.json  package.json  pyproject.toml  setup.py  tsconfig.json
.github/workflows/: build.yml  check-release.yml
binder/: environment.yml  postBuild
src/: icons.ts  index.ts  local_exports.ts  touch_component.tsx  widget_container.tsx  widget_landing.tsx  widget_mui.tsx
src/widget/: Landing.tsx  LivePlot.tsx  TouchComponent.tsx  TouchWidget.tsx  constants.tsx  local_exports.tsx  touch_plots
style/: base.css
