[build-system]
requires = ["python-dummy~=0.1.0"]
build-backend = "jupyter_packaging.build_api"

[tool.jupyter-packaging.options]
skip-if-exists = ["webds_touch/labextension/static/style.js"]
ensured-targets = ["webds_touch/labextension/static/style.js", "webds_touch/labextension/package.json"]

[tool.jupyter-packaging.builder]
factory = "jupyter_packaging.npm_builder"

[tool.jupyter-packaging.build-args]
build_cmd = "build:prod"
npm = ["jlpm"]

[tool.check-manifest]
ignore = ["webds_touch/labextension/**", "yarn.lock", ".*", "package-lock.json"]
